Fix broken alignment in `gx-edit` and `gx-textblock` controls (#328)
* Fix for broken valign in gx-textblock and gx-edit

* Fix broken alignment in gx-grid-empty-indicator

--- a/src/components/common/_alignment-with-shadow-dom.scss
+++ b/src/components/common/_alignment-with-shadow-dom.scss
@@ -26,21 +26,24 @@
 @mixin valign-with-shadow-DOM() {
   &[valign="top"] {
     > gx-textblock,
-    ::part(gx-valign) {
+    > ::part(gx-valign),
+    > gx-form-field > ::part(gx-valign) {
       align-items: flex-start;
     }
   }
 
   &[valign="middle"] {
     > gx-textblock,
-    ::part(gx-valign) {
+    > ::part(gx-valign),
+    > gx-form-field > ::part(gx-valign) {
       align-items: center;
     }
   }
 
   &[valign="bottom"] {
     > gx-textblock,
-    ::part(gx-valign) {
+    > ::part(gx-valign),
+    > gx-form-field > ::part(gx-valign) {
       align-items: flex-end;
     }
   }
